package app.enums;

public enum Element {
    FIRE,
    WATER,
    NORMAL
}
