package app.models;

public enum MonsterType {
    GOBLIN,
    DRAGON,
    ORK,
    KRAKEN,
    WIZZARD,
    KNIGHT,
    ELVE
}
