@startuml
'https://plantuml.com/sequence-diagram

Card <|-- Monster
Card <|-- Spell
CardStack *-- Card
Deck *-- Card
Package *-- Card
Battle *-- User
Card *-- Element
User *-- Deck
User *-- CardStack
Battle *-- GameLoop

RequestHandler *-- Request
RequestHandler *-- Response
Server -- RequestHandler


class User{
   - String username
   - String password
   - int coins
   - Deck u_deck
   - stack u_CardStack
   - Card fightingCard

   + defineDeck()
   + acquireCards()


}


class Card{

 #int damage
 #enum elementType
 #CardType

}

class Monster{
    -enum MonsterType

}

class Spell{


}
class CardStack{

    - List<Card> stack_cards
    + CardStack
}
class Deck{

    - List<Card> deck_cards
    + Deck(List<Card>)

}

class Battle{

    - User Player1
    - User Player2
    - GameLoop game

    +Battle(User, User)
    + initBattle()
    + startGameLoop(User, User)

}

class GameLoop{
    - int maxRounds

    +GameLoop(User, User)
}

class Package{

    - Cards[5] package_cards
    +Package(Card[5])

}
enum Element{
    WATER
    FIRE
    REGULAR
}

enum MonsterType{
    GOBLIN
    DRAGON
    ORK
    KRAKEN
    WIZZARD
    KNIGHT
    ELVE

}


class Server{
    -ServerSocket serverSocket
    -Socket clientSocket
    -App app
    -Int port

    +Server(App app, int port)
    +start()
    -run()
}

class Response{
    -int statusCode
    -String statusMessage
    -String contentType
    -String content

    +Response(HttpStatus, ContentType, String content)
    #String build()
}

class Request{
    -Method method
    -String pathname
    -String params
    -String contentType
    -Int contentLength
    -String body = ""
    -final String CONTENT_TYPE

    +Request(BufferedReader inputStream)
    -buildRequest(BufferedReader inputStream))
}

class RequestHandler{
    -Request request
    -Response response
    -PrintWirter outputStream
    -BufferedReader inputStream
    -Socket clientSocket
    -App app

    +RequestHandler(Socket, App)
    +run()

}

enum Method{
    GET
    POST
    PUT
    DELETE
}

enum HttpStatus{
    OK
    CREATED
    BAD_REQUEST
    NOT_FOUND
    INTERNAL_SERVER_ERROR
}

enum ContentType{
    HTML
    TEXT
    JSON
}


@enduml